# mistral-smt

./: .gitignore  CMakeLists.txt  README.md
sat-solver/: SolverTypes.h
